--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.8.5",
     "react-csv": "^1.1.1",
     "react-dom": "^16.8.5",
+    "react-input-mask": "^2.0.4",
     "react-scripts": "2.1.8",
     "reactstrap": "^7.1.0"
   },
