--- a/package.json
+++ b/package.json
@@ -9,14 +9,11 @@
     "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-input-mask": "^2.0.4",
-    "react-scripts": "5.0.1",
     "tailwindcss": "^3.1.8"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "vit build"
   },
   "browserslist": {
     "production": [
@@ -31,8 +28,10 @@
     ]
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^2.0.1",
     "eslint": ">=5.16.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-plugin-react": "^7.31.1"
+    "eslint-plugin-react": "^7.31.1",
+    "vite": "^3.0.9"
   }
 }
